style: fix overflow and spacing element

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,4 +10,5 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
